# mace-classifier

./: README.md  main.py  pyproject.toml
src/mace_classifier/: best_model.pt  mace_classify.ipynb  mace_integrate.ipynb  plot.ipynb  results.csv  reweighter.ipynb
src/mace_classifier/data/: augmentations.py  batchloader.py  loader.py  losses.py
src/mace_classifier/data/tests/: cu_ag.cif  mp-2258_Cu3Au.cif
