[project]
name = "mace-classifier"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "cuequivariance>=0.9.1",
    "cuequivariance-torch>=0.9.1",
    "e3nn==0.4.4",
    "mace-torch>=0.3.15",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.9,<2.10",
    "torch-ema>=0.3",
    "torch-geometric>=2.7.0",
    "torch-scatter>=2.1.2",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "ipywidgets>=8.1.8",
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv]
find-links = ["https://data.pyg.org/whl/torch-2.9.0+cu126.html"]
no-build-package = ["torch-scatter", "torch-sparse", "torch-cluster", "torch-spline-conv"]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[tool.pyright]
reportMissingModuleSource = false
reportMissingTypeStubs = false

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["mace_classifier"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
